changed header logo in activity to rem instead of %

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -49,35 +49,34 @@
         <article class="category-box-container">
             <section class="category-box">
                 <h2> Uteliv </h2>
-                <a class="more-info-links" href="#uteliv">
+                <a href="#uteliv">
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
+
+
+                    <picture>
+                        <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
+                        <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
+                        <img src="/images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
+                    </picture>
+
+                    <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
+                        Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
+                        koselige puber, finnes det noe for enhver smak.
+                    </p>
                 </a>
-
-                <picture>
-                    <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                    <img src="/images/utelivBg1" alt="bilde av kafe" style="width: 100%;">
-                </picture>
-
-                <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
-                    Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
-                    koselige puber, finnes det noe for enhver smak.
-                </p>
 
             </section>
 
             <section class="category-box">
                 <h2> Kafe </h2>
-                <a class="more-info-links" href="#uteliv">
+                <a href="#kafe">
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a>
-
                 <picture>
                     <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
                     <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
@@ -88,72 +87,70 @@
                     Enten du foretrekker en kopp kaffe, te, eller kanskje noe
                     søtt ved siden av, finner du et sted som passer din stil.
                 </p>
+            </a>
             </section>
 
             <section class="category-box">
                 <h2> Attraksjoner </h2>
-                <a class="more-info-links" href="#uteliv">
+                <a href="#attraksjoner">
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
+                    <picture>
+                        <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
+                        <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
+                        <img src="/images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
+                    </picture>
+
+                    <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
+                        Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
+                        imponerende museer og historiske monumenter som gir innblikk i kultur og
+                        historie.
+                        <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
+                    </p>
                 </a>
-
-                <picture>
-                    <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
-                    <img src="/images/attractionsBg3" alt="bilde av kafe" style="width: 100%;">
-                </picture>
-
-                <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
-                    Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
-                    imponerende museer og historiske monumenter som gir innblikk i kultur og
-                    historie.
-                    <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
-
-
-                </p>
             </section>
 
             <section class="category-box">
                 <h2> Aktiviteter </h2>
-                <a class="more-info-links" href="#uteliv">
+                <a href="#aktiviteter">
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a>
-                <picture>
-                    <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
-                    <img src="/images/activitiesBg4.jpg" alt="bilde av kafe" style="width: 100%;">
-                </picture>
+                    <picture>
+                        <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
+                        <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
+                        <img src="/images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
+                    </picture>
 
-                <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
-                    Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
-                    og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
-                    året rundt.
-                </p>
+                    <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
+                        Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
+                        og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
+                        året rundt.
+                    </p>
+                </a>
             </section>
 
             <section class="category-box">
                 <h2> Budsjettvennlig </h2>
-                <a class="more-info-links" href="#uteliv">
+                <a href="#budsjettvennlig">
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a>
-                <picture>
-                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                    <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
-                </picture>
+                    <picture>
+                        <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
+                        <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
+                        <img src="/images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
+                    </picture>
 
-                <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
-                    finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
-                    rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
-                </p>
+                    <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
+                        finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
+                        rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
+                    </p>
+                </a>
             </section>
 
         </article>
@@ -164,7 +161,7 @@
 
     </div>
 
-    <!--<article class="main-box">
+    <article class="main-box">
         <p id="uteliv">Uteliv i Oslo</p>
     </article>
 
@@ -174,7 +171,7 @@
 
     <article class="main-box">
         <p>Utforsk Oslo</p>
-    </article>-->
+    </article>
 
     <!--<article class="main-box">
         <h3> slay </h3>
@@ -234,7 +231,7 @@
         </div>
         
  -->
-            <!-- Footer Menu -->
+    <!-- Footer Menu -->
     <footer>
 
         <article class="more-info">
