--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -47,36 +47,28 @@
 
 
         <article class="category-box-container">
-            <section class="category-box">
+            <a href="#uteliv" class="category-box">
                 <h2> Uteliv </h2>
-                <a href="#uteliv">
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 -4 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
+                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
+                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                </svg>
+                <picture>
+                    <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
+                    <img src="/images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
+                </picture>
 
+                <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
+                    Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
+                    koselige puber, finnes det noe for enhver smak.
+                </p>
+            </a>
 
-                    <picture>
-                        <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                        <img src="/images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
-                    </picture>
-
-                    <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
-                        Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
-                        koselige puber, finnes det noe for enhver smak.
-                    </p>
-                </a>
-
-            </section>
-
-            <section class="category-box">
+            <a href="#kafe" class="category-box">
                 <h2> Kafe </h2>
-                <a href="#kafe">
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 -4 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
+                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
+                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                </svg>
                 <picture>
                     <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
                     <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
@@ -88,70 +80,58 @@
                     søtt ved siden av, finner du et sted som passer din stil.
                 </p>
             </a>
-            </section>
 
-            <section class="category-box">
+            <a href="#attraksjoner" class="category-box">
                 <h2> Attraksjoner </h2>
-                <a href="#attraksjoner">
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 -4 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
-                    <picture>
-                        <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
-                        <img src="/images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
-                    </picture>
+                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
+                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                </svg>
+                <picture>
+                    <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
+                    <img src="/images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
+                </picture>
+                <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
+                    Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
+                    imponerende museer og historiske monumenter som gir innblikk i kultur og
+                    historie.
+                </p>
+            </a>
 
-                    <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
-                        Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
-                        imponerende museer og historiske monumenter som gir innblikk i kultur og
-                        historie.
-                        <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
-                    </p>
-                </a>
-            </section>
-
-            <section class="category-box">
+            <a href="#aktiviteter" class="category-box">
                 <h2> Aktiviteter </h2>
-                <a href="#aktiviteter">
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 -4 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
-                    <picture>
-                        <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
-                        <img src="/images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
-                    </picture>
+                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
+                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                </svg>
+                <picture>
+                    <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
+                    <img src="/images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
+                </picture>
 
-                    <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
-                        Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
-                        og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
-                        året rundt.
-                    </p>
-                </a>
-            </section>
+                <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
+                    Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
+                    og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
+                    året rundt.
+                </p>
+            </a>
 
-            <section class="category-box">
+            <a href="#budsjettvennlig" class="category-box">
                 <h2> Budsjettvennlig </h2>
-                <a href="#budsjettvennlig">
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 -4 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
-                    <picture>
-                        <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                        <img src="/images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
-                    </picture>
+                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
+                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                </svg>
+                <picture>
+                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
+                    <img src="/images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
+                </picture>
 
-                    <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
-                        finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
-                        rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
-                    </p>
-                </a>
-            </section>
+                <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
+                    finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
+                    rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
+                </p>
+            </a>
 
         </article>
         <script src="../javascript/index-tabs"></script>
