--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -135,23 +135,31 @@
 
         </article>
         <script src="../javascript/index-tabs"></script>
+
+        <article>
+            <section class="activity-main-box">
+                <h3>Uteliv</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
+                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
+                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
+                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
+                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
+                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
+            </section>
+
+            <section class="activity-main-box">
+                <h3>Uteliv</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
+                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
+                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
+                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
+                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
+                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
+            </section>
+
+        </article>
+
     </main>
-
-    <div id="course-cards">
-
-    </div>
-
-    <article class="main-box">
-        <p id="uteliv">Uteliv i Oslo</p>
-    </article>
-
-    <article class="main-box">
-        <p>Kaffer i Oslo</p>
-    </article>
-
-    <article class="main-box">
-        <p>Utforsk Oslo</p>
-    </article>
 
     <!--<article class="main-box">
         <h3> slay </h3>
