fixed some links

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -55,7 +55,7 @@
                 <picture>
                     <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
                     <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                    <img src="/images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
+                    <img src="../images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
                 </picture>
 
                 <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
@@ -72,7 +72,7 @@
                 <picture>
                     <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
                     <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                    <img src="/images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
+                    <img src="../images/kafe1.jpg" alt="bilde av kafe" style="width: 100%;">
                 </picture>
 
                 <p> Nyt en avslappende stund på en av byens mange kaféer.
@@ -89,7 +89,7 @@
                 <picture>
                     <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
                     <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
-                    <img src="/images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
+                    <img src="../images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
                 </picture>
                 <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
                     Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
@@ -106,7 +106,7 @@
                 <picture>
                     <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
                     <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
-                    <img src="/images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
+                    <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
                 </picture>
 
                 <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
@@ -124,7 +124,7 @@
                 <picture>
                     <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
                     <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                    <img src="/images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
+                    <img src="../images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
                 </picture>
 
                 <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
