fixed course-glance-container in index->videre studiemuligheter

--- a/index.html
+++ b/index.html
@@ -974,12 +974,12 @@
 
             <section id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
                 <h2>Videre studiemuligheter ved OsloMet</h2>
-                <a id="course-glance-container"
+                <a class="course-glance-container"
                     href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
-                    <div id="course-glance">
+                    <div class="course-glance">
 
                         <h3>Anvendt data- og informasjonsteknologi (ACIT)</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Masterprogram</p>
                             <p>2 år</p>
                             <p>Pilestredet i Oslo</p>
