--- a/index.html
+++ b/index.html
@@ -1003,15 +1003,17 @@
                     <a class="more-info-links" href="https://www.oslomet.no/om/studiested-pilestredet"><svg
                             class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 -5 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>Studiestedet Pilestredet</a>
                 </div>
                 <div class="more-content-boxes">
                     <h2>Spørsmål om utdannningen?</h2>
-                    <a class="more-info-links" href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> <svg
-                            class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                    <a class="more-info-links" href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
+                        <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 -4 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>Har du spørsmål om
                         utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
                 </div>
@@ -1042,10 +1044,12 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a>
-                    <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior">
+                    <a class="course-glance-container"
+                        href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior">
                         <div class="course-glance">
                             <h3>Bioteknologi- og kjemiingeniør</h3>
                             <div class="course-glance-points">
@@ -1056,7 +1060,8 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a>
                     <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/byggingenior">
@@ -1070,7 +1075,8 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a>
                     <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/dataingenior">
@@ -1084,7 +1090,8 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a>
                     <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/elektronikkingenior">
@@ -1098,9 +1105,11 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
-                    </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/informasjonsteknologi">
+                    </a><a class="course-glance-container"
+                        href="https://www.oslomet.no/studier/tkd/informasjonsteknologi">
                         <div class="course-glance">
                             <h3>Informasjonsteknologi</h3>
                             <div class="course-glance-points">
@@ -1111,7 +1120,8 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/maskiningenior">
                         <div class="course-glance">
@@ -1124,9 +1134,11 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
-                    </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior">
+                    </a><a class="course-glance-container"
+                        href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior">
                         <div class="course-glance">
                             <h3>Tre-terminsordning til ingeniør</h3>
                             <div class="course-glance-points">
@@ -1137,7 +1149,8 @@
                         </div>
                         <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                             viewBox="0 0 24 24">
-                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                         </svg>
                     </a>
                 </div>
