--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -147,7 +147,6 @@
                     officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
             </section>
             <hr id="hr-activity">
-            <p>gå på css og bytt border-color til "#hr-activity"</p>
             <section class="activity-main-box">
                 <h3>Kafe</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
@@ -173,54 +172,54 @@
                 <p></p>
 
                 <div id="slider">
-                       <input type="radio" name="slider" id="slide1" checked>
-                       <input type="radio" name="slider" id="slide2">
-                       <input type="radio" name="slider" id="slide3">
-                       <input type="radio" name="slider" id="slide4">
-                   
-                       <div id="overflow">
-                           <div class="inner">
-                               <div class="slide slide_1">
-                                   <div class="slide-content">
-                                       <div class="text-content">
-                                           <h3>megazone</h3>
-                                       </div>
-                                       <img src="/images/megazone.jpg" alt="slide1 Image" class="slide-image">
-                                   </div>
-                               </div>
-                               <div class="slide slide_2">
-                                   <div class="slide-content">
-                                       <div class="text-content">
-                                           <h3>escape room</h3>
-                                       </div>
-                                       <img src="/images/escaperoom.jpg" alt="slide2 Image" class="slide-image">
-                                   </div>                       
-                               </div>
-                               <div class="slide slide_3">
-                                   <div class="slide-content">
-                                       <div class="text-content">
-                                           <h3>paintball</h3>
-                                       </div>
-                                       <img src="/images/paintball.jpg" alt="slide3 Image" class="slide-image">
-                                   </div>                       
-                               </div>
-                               <div class="slide slide_4">
-                                   <div class="slide-content">
-                                       <div class="text-content">
-                                           <h3>VR games</h3>
-                                       </div>
-                                       <img src="/images/vrGames.jpg" alt="slide4 Image" class="slide-image">                        
-                                   </div>
-                               </div>
-                           </div>
-                       </div>
-                   
-                       <div id="controls">
-                           <label for="slide1"></label>
-                           <label for="slide2"></label>
-                           <label for="slide3"></label>
-                           <label for="slide4"></label>
-                       </div>
+                    <input type="radio" name="slider" id="slide1" checked>
+                    <input type="radio" name="slider" id="slide2">
+                    <input type="radio" name="slider" id="slide3">
+                    <input type="radio" name="slider" id="slide4">
+
+                    <div id="overflow">
+                        <div class="inner">
+                            <div class="slide slide_1">
+                                <div class="slide-content">
+                                    <div class="text-content">
+                                        <h3>megazone</h3>
+                                    </div>
+                                    <img src="/images/megazone.jpg" alt="slide1 Image" class="slide-image">
+                                </div>
+                            </div>
+                            <div class="slide slide_2">
+                                <div class="slide-content">
+                                    <div class="text-content">
+                                        <h3>escape room</h3>
+                                    </div>
+                                    <img src="/images/escaperoom.jpg" alt="slide2 Image" class="slide-image">
+                                </div>
+                            </div>
+                            <div class="slide slide_3">
+                                <div class="slide-content">
+                                    <div class="text-content">
+                                        <h3>paintball</h3>
+                                    </div>
+                                    <img src="/images/paintball.jpg" alt="slide3 Image" class="slide-image">
+                                </div>
+                            </div>
+                            <div class="slide slide_4">
+                                <div class="slide-content">
+                                    <div class="text-content">
+                                        <h3>VR games</h3>
+                                    </div>
+                                    <img src="/images/vrGames.jpg" alt="slide4 Image" class="slide-image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="controls">
+                        <label for="slide1"></label>
+                        <label for="slide2"></label>
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                    </div>
                 </div>
 
             </section>
@@ -232,7 +231,9 @@
                     temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
                     praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
                     dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
-                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
+                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.
+
+                </p>
             </section>
         </article>
 
