did some things :)

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -225,7 +225,7 @@
 
             </section>
             <hr id="hr-activity">
-            <section class="activity-main-box">
+            <section class="activity-main-box" id="budsjettvennlig">
                 <h3>Budsjettvennlig</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
                     exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
