explanation of each section

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -41,7 +41,6 @@
                     kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
                     La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
                 </p>
-
             </div>
         </article>
 
@@ -139,102 +138,29 @@
         <article>
             <section class="activity-main-box" id="uteliv">
                 <h3>Uteliv</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
-                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
-                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
-                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
-                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
-                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
+                <p>3 store bilder</p>
             </section>
             <hr id="hr-activity">
             <section class="activity-main-box" id="kafe">
                 <h3>kafé</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
-                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
-                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
-                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
-                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
-                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.</p>
+                <p> 6 bilder som linker videre til kafeer</p>
             </section>
             <hr id="hr-activity">
             <section class="activity-main-box" id="attraksjoner">
                 <h3>Attraksjoner</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
-                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
-                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
-                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
-                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
-                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.
-                </p>
+                <p> 3 store bilder med mini discription</p>
             </section>
+
             <hr id="hr-activity">
             <section class="activity-main-box" id="aktiviteter">
                 <h3>Aktiviteter</h3>
-                <p></p>
-
-                <div id="slider">
-                    <input type="radio" name="slider" id="slide1" checked>
-                    <input type="radio" name="slider" id="slide2">
-                    <input type="radio" name="slider" id="slide3">
-                    <input type="radio" name="slider" id="slide4">
-
-                    <div id="overflow">
-                        <div class="inner">
-                            <div class="slide slide_1">
-                                <div class="slide-content">
-                                    <div class="text-content">
-                                        <h3>megazone</h3>
-                                    </div>
-                                    <img src="/images/megazone.jpg" alt="slide1 Image" class="slide-image">
-                                </div>
-                            </div>
-                            <div class="slide slide_2">
-                                <div class="slide-content">
-                                    <div class="text-content">
-                                        <h3>escape room</h3>
-                                    </div>
-                                    <img src="/images/escaperoom.jpg" alt="slide2 Image" class="slide-image">
-                                </div>
-                            </div>
-                            <div class="slide slide_3">
-                                <div class="slide-content">
-                                    <div class="text-content">
-                                        <h3>paintball</h3>
-                                    </div>
-                                    <img src="/images/paintball.jpg" alt="slide3 Image" class="slide-image">
-                                </div>
-                            </div>
-                            <div class="slide slide_4">
-                                <div class="slide-content">
-                                    <div class="text-content">
-                                        <h3>VR games</h3>
-                                    </div>
-                                    <img src="/images/vrGames.jpg" alt="slide4 Image" class="slide-image">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="controls">
-                        <label for="slide1"></label>
-                        <label for="slide2"></label>
-                        <label for="slide3"></label>
-                        <label for="slide4"></label>
-                    </div>
-                </div>
-
+                <p> her kommer det en slider thingi</p>
             </section>
+
             <hr id="hr-activity">
             <section class="activity-main-box">
                 <h3>Budsjettvennlig</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique in, libero expedita
-                    exercitationem magnam at sit incidunt delectus deleniti. Voluptatem eum dolores obcaecati numquam,
-                    temporibus molestias repudiandae iste facere excepturi error vitae impedit voluptas eveniet in
-                    praesentium ipsum. Tempore quisquam voluptates praesentium eius repellendus expedita, quos inventore
-                    dolorem at labore optio fugit, voluptatum quia? Quo enim sint reiciendis soluta libero autem odio. A
-                    officia quisquam voluptate omnis perspiciatis earum adipisci dolorem illum explicabo deserunt.
-
-                </p>
+                <p> kommer med 6 små bilder, to rader 3 klonner + hover + firkant + ekstern link </p>
             </section>
         </article>
 
@@ -242,7 +168,6 @@
 
     <!-- Footer Menu -->
     <footer>
-
         <article class="more-info">
             <div class="row">
                 <section id="col1">
@@ -307,25 +232,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav class="mediabox">
-
-            <ul class="media">
-                <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
-                </li>
-
-                <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
-                </li>
-
-                <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="mediabox"></nav>
     </footer>
 </body>
 
