--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="images\Logo_of_Oslo_Metropolitan_University_ffd500_square.png">
     <title>Matematisk modellering og datavitenskap – ingeniør - OsloMet</title>
 </head>
 <header>
@@ -1212,7 +1213,7 @@
                 <section id="col3">
                     <span id="icon" class="fa fa-info" alt="Info"></span>
                     <span>
-                        <h3> Mer Info</h3>
+                        <h3>Mer Info</h3>
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button">
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
