--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon_io/favicon.ico">
-    <title> guide </title>
+    <title> Activities in Oslo </title>
 </head>
 
-<header id="header-activity">
+<header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <a href="#" class="img-container">
         <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
