--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -139,14 +139,44 @@
 
         <article>
             <section class="activity-main-box" id="uteliv">
-                <h3>Uteliv</h3>
+                <h3>Uteliv i OSLO</h3>
                 <p>3 store bilder</p>
+                <!--midlertidig, ..., ikke resposiv ,
+                <div class=""></div>
+
+                <a href="https://www.himkok.no/">
+                    <figure>
+                        <img src="/images/himkok-uteliv1.3.jpeg" alt="Himkok i OSLO" class="activity-img">
+                        <figcaption> phot by me: </figcaption>
+                    </figure>
+                </a>
+
+                <img src="/images/thetopbar-uteliv2.3.jpg" alt="image 1" class="activity-img">
+                <a href="https://www.thetoposlo.no/bar">The top bar</a>
+                <img src="/images/postbar-uteliv3.3.jpg" alt="image 1" class="activity-img">
+                <a href="https://www.posthallen.no/">Posthallen Drinkhub</a>
+                </div>-->
             </section>
 
+
+            <!--kommentar til scroll id: endre slik at den stopper før hr?, nå:scroller frem til tittelen..-->
             <hr id="hr-activity">
             <section class="activity-main-box" id="kafe">
                 <h3>kafé</h3>
-                <p> 6 bilder som linker videre til kafeer</p>
+                <!--midlertidig!! bedre måte enn a heleveien?, men koden er responsiv og funker:)-->
+                <!--endre class navn?, neo som mangler..-->
+                <div class="small-img-container">
+                    <a href="https://www.handbakt.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 1"></a>
+                    <a href="https://kumi.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 2"></a>
+                    <a href="https://fuglen.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 3"></a>
+                    <a href="https://www.laundromat.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 4"></a>
+                    <a href="https://pustkaffebar.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 5"></a>
+                    <a href="https://cafecathedral.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 6"></a>
+                </div>
             </section>
 
             <hr id="hr-activity">
@@ -159,12 +189,32 @@
             <section class="activity-main-box" id="aktiviteter">
                 <h3>Aktiviteter</h3>
                 <p> her kommer det en slider thingi</p>
+                <!--funke for nå, men må forbedres, legge bilde under osv-->
+                <div class="scroll-img-container">
+                    <img src="/images/activitiesBg4.jpg" alt="">
+                    <img src="/images/attractionsBg3.jpg" alt="">
+                    <img src="/images/cafeBg2.jpg" alt="">
+                    <img src="/images/cafeBg2.jpg" alt="">
+                </div>
             </section>
 
             <hr id="hr-activity">
             <section class="activity-main-box" id="budsjettvennlig">
                 <h3>Budsjettvennlig</h3>
-                <p> kommer med 6 små bilder, to rader 3 klonner + hover + firkant + ekstern link </p>
+                <!--samme layout!! som kafe, må endre href og bilder -->
+                <div class="small-img-container">
+                    <a href="https://www.handbakt.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 1"></a>
+                    <a href="https://kumi.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 2"></a>
+                    <a href="https://fuglen.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 3"></a>
+                    <a href="https://www.laundromat.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 4"></a>
+                    <a href="https://pustkaffebar.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 5"></a>
+                    <a href="https://cafecathedral.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
+                            alt="Bilde 6"></a>
+                </div>
+
             </section>
         </article>
 
@@ -177,65 +227,26 @@
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
-                    <address class="address-font">
-                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
-                            <h3>Oslo Metropolitan University</h3>
-                        </a>
-                        <p>Storbyuniversitetet</p>
-                        Postboks 4, St. Olavs plass
-                        0130 Oslo
-                    </address>
                 </section>
 
                 <section id="col2">
                     <span id="icon" class="fa fa-phone" alt="Telefon"></span>
 
-                    <address class="address-font">
-                        <h3>Kontakt oss</h3>
-                        <p>Tlf.: 67 23 50 00</p>
-                    </address>
                 </section>
 
                 <section id="col3">
                     <span id="icon" class="fa fa-info" alt="Info"></span>
                     <span>
-                        <h3> Mer Info</h3>
                         <div class="more-info-tab">
+                            <!--dersom tabben under bli borte vil ikke dropdown oppe funke + java ofc-->
                             <button id="toggle-tab" class="more-info-tab-button">
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                                    viewBox="2 1 20 20" alt=" Nedover pil">
-                                    <path fill-rule="evenodd"
-                                        d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
-                                </svg>
                             </button>
-                        </div>
-                        <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
-                                studenter</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
-                                stillinger</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
-                                og <br> informasjonskapslar</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
-                            <a class="more-info-links"
-                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
         </article>
-        <!-- Social Media links -->
         <nav class="mediabox"></nav>
     </footer>
 </body>
