changed structure of h1 and p underneath, also renamed acessibility-background to activity-background

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -30,18 +30,16 @@
 
 
 <body class="activity">
-    <div id="accessibility-background"></div>
+    <div id="activity-background"></div>
     <main>
         <article>
-            <div class="container">
-                <h1 class="header-activity">Utforsk Oslo på en ny måte!</h1>
-                <p class="info-box">Velkommen til din guide til Oslo,
-                    hvor vi har samlet de beste tipsene innen fire spennende kategorier.
-                    Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
-                    kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
-                    La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
-                </p>
-            </div>
+            <h1 class="header-activity">Utforsk Oslo på en ny måte!</h1>
+            <p class="info-box">Velkommen til din guide til Oslo,
+                hvor vi har samlet de beste tipsene innen fire spennende kategorier.
+                Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
+                kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
+                La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
+            </p>
         </article>
 
 
