some changes in text in accessibility

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -31,13 +31,13 @@
         <article>
             <h1>Accessibility</h1>
             <p>For å lage en nettside med universell god design, sørget vi for å inkludere alternativ tekst for ikke-tekstlig innhold og 
-                bruke sans-serif-fonter for god lesbarhet.  Når det gjelder tekst og farger var vi bevist på at det er viktig å velge en 
-                farge som har god kontrast med bakgrunnen for leseligheten. Like viktig er struktur og en behagelig lese opplevelse til 
+                bruke sans-serif-fonter for god lesbarhet.  Når det gjelder tekst og farger var vi bevisst på at det er viktig å velge en 
+                farge som har god kontrast med bakgrunnen for leseligheten. Like viktig er struktur og en behagelig leseopplevelse til 
                 nettstedet, derfor er det delt inn i flere seksjoner og avsnitt ved hjelp av overskrifter, underoverskrifter, marginer, 
                 paddinger og skillelinjer. Vi brukte tabs for å minimere lengden av siden og skape en renere og forenklet nettside. For å 
                 skape en gjenkjennelig stil må layout og navigasjon være konsekvente på alle sidene unntatt aktivitetssiden, så 
                 navigasjonslinjen og footer er nøyaktig den samme og har i tillegg samme fargepalett. Siden nettsidene skal være 
-                brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten det ville føre til noen problemer. For eksempel 
+                brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten bruk av dette ville noen problemer oppstå. For eksempel 
                 forskjellen på skjermbredde mellom en telefon og en laptop. Derfor må paddinger, margene og selve strukturen for 
                 plassering av noen få elementer, være ulikt på de skjermene. Dermed er det viktig at skjermen er responsiv for å ha en 
                 god visuell opplevelse. Nettsiden sørger også for at innhold vises og fungerer på forutsigbare måter med 
