--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -12,7 +12,7 @@
 
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="#" class="img-container">
+    <a href="https://www.oslo.kommune.no/#gref" class="img-container">
         <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
     </a>
     <nav>
@@ -142,13 +142,13 @@
                 <!--midlertidig, ..., ikke resposiv ,-->
                 <div class="big-img-container">
                     <a href="https://www.himkok.no/">
-                        <img src="/images/himkok-uteliv1.3.jpeg" alt="Himkok i OSLO" class="big-img-box">
+                        <img src="/images/uteliv/himkok-uteliv1.3.jpeg" alt="Himkok i OSLO" class="big-img-box">
                     </a>
                     <a href="https://www.thetoposlo.no/bar">
-                        <img src="/images/thetopbar-uteliv2.3.jpg" alt="The top bar" class="big-img-box">
+                        <img src="/images/uteliv/thetopbar-uteliv2.3.jpg" alt="The top bar" class="big-img-box">
                     </a>
                     <a href="https://www.posthallen.no/">
-                        <img src="/images/postbar-uteliv3.3.jpg" alt="image 1" class="big-img-box">
+                        <img src="/images/uteliv/postbar-uteliv3.3.jpg" alt="Posthallen" class="big-img-box">
                     </a>
                 </div>
             </section>
