changed img-wawe-test to "width: 100%" to scale with screen size

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -54,7 +54,7 @@
                 enheter. Dette gjør det også enklere for brukere med tilpassede innstillinger, som synshemmede, å navigere og lese 
                 innholdet, noe som er et viktig hensyn for universell utforming.</p>
             <div class="img-container"></div> 
-        
+        <!-- ???? skal denne brukes? ^^^^^ -->
         </article>
 
         <article>
